沉默以对-吕口口

--- a/电影天堂.ipynb
+++ b/电影天堂.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +25,15 @@
     "for it in resultA:\n",
     "  url.append(parse.urljoin(domain, it.group('href')))\n",
     "\n",
-    "objP = re.compile(r'◎片　　名(?P<name>./*)<br'\n",
-    "                  r'', re.S)\n",
+    "objP = re.compile(r'◎片　　名(?P<name>.*?)<br'\n",
+    "                  r'.*?<td.*?<a href=\"(?P<downloadT>.*?)\">'\n",
+    "                  , re.S)\n",
     "for herf in url:\n",
     "  res = requests.get(herf)\n",
-    "  res.encoding = 'gb2312'\n"
+    "  res.encoding = 'gb2312'\n",
+    "  resultT = objP.search(res.text)\n",
+    "  print(resultT.group('name'), resultT.group('downloadT'))\n",
+    "  res.close()\n"
    ]
   }
  ],
