--- a/入门.md
+++ b/入门.md
@@ -3,16 +3,20 @@
 
 ```mermaid
 graph LR
-  subgraph server
-  s1((server)); s2((server))
+style web fill: #CCFFFF, stroke: #FFFFFF
+style server stroke-dasharray: 10
+subgraph web
+  subgraph process1
+  c1([client]); s1((server))
   end
-  subgraph client
-  c1([client]); c2([client])
+  subgraph process2
+  c2([client]); s2((server))
   end
-  c1--1.请求网页-->s1
-  s1--2.HTML骨架-->c1
-  c2--3.要数据-->s2
-  s2--4.给数据-->c2
+  c1--->|1.请求网页|s1
+  s1--->|2.HTML骨架|c1
+  c2--->|1.要数据|s2
+  s2--->|2.给数据|c2
+end
   
 ```
 1. 服务器渲染：服务器将数据和HTML整合返回给浏览器
@@ -47,3 +51,22 @@ cookie
 
 - GET：查询（显示提交
 - POST：增加/修改/上传（隐式提交
+
+
+## Coookie
+```mermaid
+graph LR
+style cookie fill: #CCFFFF, stroke: #FFFFFF
+subgraph cookie
+  subgraph process1
+    c1([client]); s1[(server)]
+  end
+  subgraph process2
+    c2([client]); s2[(server)]
+  end
+  c1--->|requests|s1
+  s1--->|cookie|c1
+  c2--->|cookie|s2
+end
+```
+
